Fix a couple of things that FindBugs found:  * Use Boolean.valueOf() instead of creating new instances.  * Use StringBuffer instead of concatenating Strings in a loop.
git-svn-id: https://svn.apache.org/repos/asf/struts/trunk@51669 13f79535-47bb-0310-9956-ffa450edef68